# Next-Web

./: .env.example  .gitignore  .npmrc  RAILWAY_DEPLOYMENT.md  README.md  next.config.js  nixpacks.toml  package-lock.json  package.json  prisma.config.ts  railway.json  tailwind.config.ts  tsconfig.json
prisma/: schema.prisma
prisma/migrations/: migration_lock.toml
prisma/migrations/20260105000000_init/: migration.sql
programs/payment/: Cargo.toml  README.md  build.sh
programs/payment/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/ai/generate-workflow/: route.ts
src/app/api/auth/nonce/: route.ts
src/app/api/auth/verify/: route.ts
src/app/api/workspaces/: route.ts
src/app/api/workspaces/[id]/: route.ts
src/app/api/workspaces/[id]/export/: route.ts
src/app/api/workspaces/import/: route.ts
src/components/: AIBuilder.tsx  AuthButton.tsx  ConnectionStatus.tsx  HowItWorksModal.tsx  KeyboardShortcutsHelp.tsx  NodeEditor.tsx  PropertiesPanel.tsx  Providers.tsx  Sidebar.tsx  Toolbar.tsx
src/components/nodes/: CustomNode.tsx
src/constants/: index.ts
src/data/: nodeDefinitions.ts
src/hooks/: useAuth.ts  useKeyboardShortcuts.ts  useNodeExecution.ts
src/lib/: api.ts  auth.ts  bags-client.ts  middleware.ts  nodeExecutor.ts  payment-client.ts  prisma.ts
src/stores/: workspaceStore.ts
src/types/: nodes.ts
src/utils/: formatting.ts
