[package]
name = "next-payment"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "next_payment"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
solana-program = "~1.18"
spl-token = "~4.0"
borsh = "0.10"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "~1.18"
solana-sdk = "~1.18"

